Add documentation and lowered access modifiers where possible.